@@ -317,6 +317,62 @@ dnl make ZLIB and ZLIBDIR visible to Makefiles
 AC_SUBST([ZLIB])
 AC_SUBST([ZLIBINCL])
 
+AC_ARG_ENABLE(
+  [geoip],
+  [AS_HELP_STRING(
+    [--disable-geoip],
+    [disable geoip support (if enabled, you can use --with-libgeoip to choose whether to link against shipped or system library) [default=yes]])],
+  [[ARG_ENABLE_GEOIP=$enableval]],
+  [[ARG_ENABLE_GEOIP=yes
+   ac_arg_enable_geoip=yes]]
+)
+
+AC_ARG_WITH(
+  [libgeoip],
+  [AS_HELP_STRING(
+    [--with-libgeoip],
+    [enable linking against system libgeoip [default=shipped]])],
+  [[ARG_WITH_LIBGEOIP=$withval]],
+  [[ARG_WITH_LIBGEOIP=no]]
+)
+
+AC_MSG_CHECKING([whether to link against system libgeoip]) #depends: $ac_arg_enable_geoip
+AS_CASE(["$ARG_WITH_LIBGEOIP"],
+  ["yes"|"system"], [
+      AC_MSG_RESULT([yes])
+
+      AS_IF([test "x$ac_arg_enable_geoip" = "xno"],
+            [AC_MSG_ERROR([GeoIP support is disabled with this build configuration. Try using --enable-geoip.])])
+
+      PKG_PROG_PKG_CONFIG([0.20])
+
+      AC_MSG_NOTICE([libgeoip: now checking for the libgeoip library...])
+
+      AC_CHECK_GEOIP([
+        LIBS="$GEOIP_LIBS $LIBS"
+        CFLAGS="$GEOIP_CFLAGS $CFLAGS"
+       ],[
+        AC_MSG_ERROR([GeoIP library not found. Try using --without-libgeoip to link against the shipped copy.])
+      ])
+   ],
+  ["no"|"shipped"], [
+      AS_IF([test "x$ac_arg_enable_geoip" = "xno"], [
+            # if geoip support is disabled via --disable-geoip,
+            # prevent from building/linking libgeoip at all
+            # (either system or shipped)
+            AC_MSG_RESULT([disabled])
+            ARG_WITH_LIBGEOIP="disabled"
+       ], [
+            AC_MSG_RESULT([no])
+            ARG_WITH_LIBGEOIP="no"
+      ])
+   ],
+  [AC_MSG_RESULT([$ARG_WITH_LIBGEOIP])
+   AC_MSG_ERROR([Unknown option "$ARG_WITH_LIBGEOIP". Use either "yes" or "no".])]
+)
+
+AM_CONDITIONAL([WITH_SHIPPED_GEOIP], [test "x$ARG_WITH_LIBGEOIP" = "xno" ])
+
 dnl Check whether python bindings should be build
 AC_ARG_ENABLE(
 	[python-binding],
